# navman-multi-3100s

./: .gitmodules  CMakeLists.txt  README.md  color_scheme.cpp  config.h  gps.h  keyboard.h  navman-multi-3100s.ino  navman.h  nmea.h  nmea_old.h  nmea_protocol.h  screen_dashboard.cpp  screen_log.cpp  screen_manager.cpp  screen_welcome.cpp  sensor_compass.h  sensor_gps.h
cmake/: arduino_core.cmake  arduino_library.cmake  arduino_toolchain.cmake  arduino_utils.cmake  host_toolchain.cmake
display/: boat_icon.h  button.h  clock_widget.h  color_scheme.h  display.h  drawable.h  heading_widget.h  metric_value_widget.h  metrics_widget.h  satellite_widget.h  screen.h  screen_manager.h  text.h  utils.h
display/icons/: header.h  left_arrow.h  sattelite.h  settings.h  timer_icon.h
imgs/: Dasboard A.xcf
scripts/: drawio.py
sketch/: navman-multi-3100s.cpp
sketch/assets/imgs/: Screen.xcf
sketch/include/: logger.h  sensor.h  sensor_manager.h
sketch/include/display/: arrow_icon.h  button.h  buttons.h  clock_widget.h  display.h  heading_widget.h  icon.h  metrics_widget.h  satellite_widget.h  screen.h  screen_manager.h  text.h  utils.h  widget.h
sketch/include/display/assets/: bulb.h  right_arrow.h
sketch/include/display/icons/: arrow_icon.h  bitmap_icon.h  boat_icon.h  ring_icon.h
sketch/include/display/screens/: base_screen.h  dashboard_screen.h  log_screen.h  welcome_screen.h
sketch/include/display/widgets/: clock_widget.h  heading_widget.h  metric_value_widget.h  metrics_widget.h  satellite_widget.h  widget.h
sketch/include/sensors/: sensor_gps.h
sketch/src/: cli.h  clock.h  logger.cpp  navman.h  screen_dashboard.cpp  screen_manager.cpp  sensor_compass.h  sensor_gps.h  sensor_manager.cpp
sketch/src/protocols/: nmea_protocol.cpp  nmea_protocol.h
sketch/src/screens/: screen_dashboard.cpp  screen_manager.cpp
sketch/src/sensors/: compass.cpp  compass.h  gps.cpp  gps.h
tests/Arduino/core/: Arduino.cpp  Arduino.h  HardwareSerial.cpp  HardwareSerial.h  Stream.h  WString.h
tests/Arduino/libraries/DIYables_TFT_Touch_Shield/: CMakeLists.txt  DIYables_TFT_Touch_Shield.cpp  DIYables_TFT_Touch_Shield.h
tests/Arduino/libraries/SPI/: SPI.h
tests/Arduino/libraries/Wire/: Wire.h
